--- a/Fellow_Ship.ipynb
+++ b/Fellow_Ship.ipynb
@@ -1953,7 +1953,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# this is good "
+   ]
   }
  ],
  "metadata": {
